# todust

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  test.asciidoc  test.html  todust
.github/workflows/: rust.yml
resources/: header.asciidoc
resources/sqlite/: add_entry.sql  get_active_count.sql  get_active_entries.sql  get_count.sql  get_done_count.sql  get_entries.sql  get_projects.sql  schema.sql  update_entry.sql
resources/sqlite/migration/v1/: null_project_to_default_project.sql
resources/templates/: entries.asciidoc
src/: cli.yml  config.rs  entry.rs  entry_v2.rs  helper.rs  main.rs  measure.rs  opt.rs  store.rs  store_csv.rs  store_csv2.rs  store_sqlite.rs  store_v2.rs  templating.rs  todo.rs
src/store/: index.rs  mod.rs  vcs.rs
src/store_csv/: index.rs  index.rs_  mod.rs  store.rs  vcs.rs
src/webservice/: mod.rs
src/webservice/resources/css/: main.css
src/webservice/resources/html/: entry.html.tera  entry_edit.html.tera  entry_move_project.html.tera  index.html.tera  project.html.tera  project_add_entry.html.tera
test/: .settings.toml
test/index/: thaller-laptop.csv
