[package]
name = "todust"
version = "0.9.1"
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1"
failure = "0.1"
fs2 = "0.4"
githelper = "0.3"
glob = "0.3"
http = "0.1"
lazy_static = "1"
log = "0.4"
prettytable-rs = "0.8"
serde = "1"
serde_json = "1"
simplelog = "0.7"
structopt = "0.3"
tempfile = "3"
tera = "0.11"
text_io = "0.1"
tide = "0.3"
time = "0.1"
toml = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
xdg = "2"

[profile.release]
lto = true
